ANTLR_Generated/.antlr/DSL_2D_3DParser.java
// Generated from e:/programs/DSL-Web-2D-3D/ANTLR_Generated/DSL_2D_3D.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DSL_2D_3DParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		Tetrahedron=10, Cuboid=11, Orb=12, Tetragon=13, Object=14, Number=15, 
		Texture=16, Generate=17, BuildTexture=18, Image=19, X_axis=20, Y_axis=21, 
		Z_axis=22, Diameter=23, Magnify=24, ShiftX=25, ShiftY=26, ShiftZ=27, SpinX=28, 
		SpinY=29, SpinZ=30, MapTexture=31, Adjust=32, NUMERIC_VALUE=33, IDENTIFIER=34, 
		CHAR=35, WS=36;
	public static final int
		RULE_code_block = 0, RULE_action_list = 1, RULE_applyTransformation = 2, 
		RULE_action = 3, RULE_define_variable = 4, RULE_construct = 5, RULE_shape_type = 6, 
		RULE_shape_property = 7, RULE_property_set = 8, RULE_property_key = 9, 
		RULE_manipulate = 10, RULE_value = 11, RULE_texture_application = 12, 
		RULE_matrix_def = 13, RULE_manipulation_list = 14, RULE_resource_url = 15, 
		RULE_start = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"code_block", "action_list", "applyTransformation", "action", "define_variable", 
			"construct", "shape_type", "shape_property", "property_set", "property_key", 
			"manipulate", "value", "texture_application", "matrix_def", "manipulation_list", 
			"resource_url", "start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'applyTransformation'", "'('", "')'", "';'", "'='", "'{'", 
			"'}'", "'grid'", "'Tetrahedron'", "'Cuboid'", "'Orb'", "'Tetragon'", 
			"'Object'", "'Number'", "'Texture'", "'Generate'", "'Build Texture'", 
			"'Image'", "'X-axis'", "'Y-axis'", "'Z-axis'", "'Diameter'", "'Magnify'", 
			"'ShiftX'", "'ShiftY'", "'ShiftZ'", "'SpinX'", "'SpinY'", "'SpinZ'", 
			"'MapTexture'", "'Adjust'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "Tetrahedron", 
			"Cuboid", "Orb", "Tetragon", "Object", "Number", "Texture", "Generate", 
			"BuildTexture", "Image", "X_axis", "Y_axis", "Z_axis", "Diameter", "Magnify", 
			"ShiftX", "ShiftY", "ShiftZ", "SpinX", "SpinY", "SpinZ", "MapTexture", 
			"Adjust", "NUMERIC_VALUE", "IDENTIFIER", "CHAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSL_2D_3D.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSL_2D_3DParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Code_blockContext extends ParserRuleContext {
		public Action_listContext action_list() {
			return getRuleContext(Action_listContext.class,0);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterCode_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitCode_block(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			action_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_listContext extends ParserRuleContext {
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public Action_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterAction_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitAction_list(this);
		}
	}

	public final Action_listContext action_list() throws RecognitionException {
		Action_listContext _localctx = new Action_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_action_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			action();
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(37);
				match(T__0);
				setState(38);
				action();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApplyTransformationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DSL_2D_3DParser.IDENTIFIER, 0); }
		public ApplyTransformationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_applyTransformation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterApplyTransformation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitApplyTransformation(this);
		}
	}

	public final ApplyTransformationContext applyTransformation() throws RecognitionException {
		ApplyTransformationContext _localctx = new ApplyTransformationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_applyTransformation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__1);
			setState(45);
			match(T__2);
			setState(46);
			match(IDENTIFIER);
			setState(47);
			match(T__3);
			setState(48);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionContext extends ParserRuleContext {
		public Define_variableContext define_variable() {
			return getRuleContext(Define_variableContext.class,0);
		}
		public ManipulateContext manipulate() {
			return getRuleContext(ManipulateContext.class,0);
		}
		public Texture_applicationContext texture_application() {
			return getRuleContext(Texture_applicationContext.class,0);
		}
		public Matrix_defContext matrix_def() {
			return getRuleContext(Matrix_defContext.class,0);
		}
		public ApplyTransformationContext applyTransformation() {
			return getRuleContext(ApplyTransformationContext.class,0);
		}
		public ConstructContext construct() {
			return getRuleContext(ConstructContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_action);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Object:
			case Number:
			case Texture:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				define_variable();
				}
				break;
			case Magnify:
			case ShiftX:
			case ShiftY:
			case ShiftZ:
			case SpinX:
			case SpinY:
			case SpinZ:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				manipulate();
				}
				break;
			case MapTexture:
			case Adjust:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				texture_application();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				matrix_def();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				applyTransformation();
				}
				break;
			case Generate:
			case BuildTexture:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				construct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_variableContext extends ParserRuleContext {
		public TerminalNode Object() { return getToken(DSL_2D_3DParser.Object, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DSL_2D_3DParser.IDENTIFIER, 0); }
		public ConstructContext construct() {
			return getRuleContext(ConstructContext.class,0);
		}
		public TerminalNode Number() { return getToken(DSL_2D_3DParser.Number, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(DSL_2D_3DParser.NUMERIC_VALUE, 0); }
		public TerminalNode Texture() { return getToken(DSL_2D_3DParser.Texture, 0); }
		public Define_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterDefine_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitDefine_variable(this);
		}
	}

	public final Define_variableContext define_variable() throws RecognitionException {
		Define_variableContext _localctx = new Define_variableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_variable);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Object:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(Object);
				setState(59);
				match(IDENTIFIER);
				setState(60);
				match(T__5);
				setState(61);
				construct();
				}
				break;
			case Number:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(Number);
				setState(63);
				match(IDENTIFIER);
				setState(64);
				match(T__5);
				setState(65);
				match(NUMERIC_VALUE);
				}
				break;
			case Texture:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(Texture);
				setState(67);
				match(IDENTIFIER);
				setState(68);
				match(T__5);
				setState(69);
				construct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructContext extends ParserRuleContext {
		public TerminalNode Generate() { return getToken(DSL_2D_3DParser.Generate, 0); }
		public Shape_typeContext shape_type() {
			return getRuleContext(Shape_typeContext.class,0);
		}
		public Shape_propertyContext shape_property() {
			return getRuleContext(Shape_propertyContext.class,0);
		}
		public TerminalNode BuildTexture() { return getToken(DSL_2D_3DParser.BuildTexture, 0); }
		public TerminalNode Image() { return getToken(DSL_2D_3DParser.Image, 0); }
		public Resource_urlContext resource_url() {
			return getRuleContext(Resource_urlContext.class,0);
		}
		public ConstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterConstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitConstruct(this);
		}
	}

	public final ConstructContext construct() throws RecognitionException {
		ConstructContext _localctx = new ConstructContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_construct);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(Generate);
				setState(73);
				shape_type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(Generate);
				setState(75);
				shape_type();
				setState(76);
				match(T__6);
				setState(77);
				shape_property();
				setState(78);
				match(T__7);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(BuildTexture);
				setState(81);
				match(T__6);
				setState(82);
				match(Image);
				setState(83);
				resource_url();
				setState(84);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Shape_typeContext extends ParserRuleContext {
		public TerminalNode Tetrahedron() { return getToken(DSL_2D_3DParser.Tetrahedron, 0); }
		public TerminalNode Cuboid() { return getToken(DSL_2D_3DParser.Cuboid, 0); }
		public TerminalNode Orb() { return getToken(DSL_2D_3DParser.Orb, 0); }
		public TerminalNode Tetragon() { return getToken(DSL_2D_3DParser.Tetragon, 0); }
		public Shape_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterShape_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitShape_type(this);
		}
	}

	public final Shape_typeContext shape_type() throws RecognitionException {
		Shape_typeContext _localctx = new Shape_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shape_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Shape_propertyContext extends ParserRuleContext {
		public List<Property_setContext> property_set() {
			return getRuleContexts(Property_setContext.class);
		}
		public Property_setContext property_set(int i) {
			return getRuleContext(Property_setContext.class,i);
		}
		public Shape_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterShape_property(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitShape_property(this);
		}
	}

	public final Shape_propertyContext shape_property() throws RecognitionException {
		Shape_propertyContext _localctx = new Shape_propertyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_shape_property);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			property_set();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(91);
				match(T__0);
				setState(92);
				property_set();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Property_setContext extends ParserRuleContext {
		public Property_keyContext property_key() {
			return getRuleContext(Property_keyContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DSL_2D_3DParser.IDENTIFIER, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(DSL_2D_3DParser.NUMERIC_VALUE, 0); }
		public Property_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterProperty_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitProperty_set(this);
		}
	}

	public final Property_setContext property_set() throws RecognitionException {
		Property_setContext _localctx = new Property_setContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_property_set);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				property_key();
				setState(99);
				match(T__5);
				setState(100);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				property_key();
				setState(103);
				match(T__5);
				setState(104);
				match(NUMERIC_VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Property_keyContext extends ParserRuleContext {
		public TerminalNode X_axis() { return getToken(DSL_2D_3DParser.X_axis, 0); }
		public TerminalNode Y_axis() { return getToken(DSL_2D_3DParser.Y_axis, 0); }
		public TerminalNode Z_axis() { return getToken(DSL_2D_3DParser.Z_axis, 0); }
		public TerminalNode Diameter() { return getToken(DSL_2D_3DParser.Diameter, 0); }
		public TerminalNode Magnify() { return getToken(DSL_2D_3DParser.Magnify, 0); }
		public Property_keyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterProperty_key(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitProperty_key(this);
		}
	}

	public final Property_keyContext property_key() throws RecognitionException {
		Property_keyContext _localctx = new Property_keyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_property_key);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 32505856L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ManipulateContext extends ParserRuleContext {
		public TerminalNode ShiftX() { return getToken(DSL_2D_3DParser.ShiftX, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode ShiftY() { return getToken(DSL_2D_3DParser.ShiftY, 0); }
		public TerminalNode ShiftZ() { return getToken(DSL_2D_3DParser.ShiftZ, 0); }
		public TerminalNode Magnify() { return getToken(DSL_2D_3DParser.Magnify, 0); }
		public TerminalNode SpinX() { return getToken(DSL_2D_3DParser.SpinX, 0); }
		public TerminalNode SpinY() { return getToken(DSL_2D_3DParser.SpinY, 0); }
		public TerminalNode SpinZ() { return getToken(DSL_2D_3DParser.SpinZ, 0); }
		public ManipulateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_manipulate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterManipulate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitManipulate(this);
		}
	}

	public final ManipulateContext manipulate() throws RecognitionException {
		ManipulateContext _localctx = new ManipulateContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_manipulate);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ShiftX:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(ShiftX);
				setState(111);
				match(T__2);
				setState(112);
				value();
				setState(113);
				match(T__3);
				}
				break;
			case ShiftY:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(ShiftY);
				setState(116);
				match(T__2);
				setState(117);
				value();
				setState(118);
				match(T__3);
				}
				break;
			case ShiftZ:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				match(ShiftZ);
				setState(121);
				match(T__2);
				setState(122);
				value();
				setState(123);
				match(T__3);
				}
				break;
			case Magnify:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				match(Magnify);
				setState(126);
				match(T__2);
				setState(127);
				value();
				setState(128);
				match(T__3);
				}
				break;
			case SpinX:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				match(SpinX);
				setState(131);
				match(T__2);
				setState(132);
				value();
				setState(133);
				match(T__3);
				}
				break;
			case SpinY:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				match(SpinY);
				setState(136);
				match(T__2);
				setState(137);
				value();
				setState(138);
				match(T__3);
				}
				break;
			case SpinZ:
				enterOuterAlt(_localctx, 7);
				{
				setState(140);
				match(SpinZ);
				setState(141);
				match(T__2);
				setState(142);
				value();
				setState(143);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DSL_2D_3DParser.IDENTIFIER, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(DSL_2D_3DParser.NUMERIC_VALUE, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !(_la==NUMERIC_VALUE || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Texture_applicationContext extends ParserRuleContext {
		public TerminalNode MapTexture() { return getToken(DSL_2D_3DParser.MapTexture, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DSL_2D_3DParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DSL_2D_3DParser.IDENTIFIER, i);
		}
		public TerminalNode Adjust() { return getToken(DSL_2D_3DParser.Adjust, 0); }
		public Texture_applicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_texture_application; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).enterTexture_application(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_2D_3DListener ) ((DSL_2D_3DListener)listener).exitTexture_application(this);
		}
	}
